[package]
name = "rust-eth-yt"
version = "0.1.0"
edition = "2021"
author = "Alberto Rodriguez Garcia"

[[bin]]
name = "transact"
path = "src/simple_transactions.rs"

[[bin]]
name = "deploy"
path = "src/contract_deploy.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
ethers = { version = "2.0.14" }
ethers-providers = { version = "2.0.14", features = ["ws"] }
ethers-solc = { version = "2.0.14", features = ["full"] }
eyre = "0.6.12"
hex = "0.4.3"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
